# A-PAG-Agentic-Data-Analyst

./: .commitlintrc.json  .editorconfig  .env.example  .gitattributes  .gitignore  .vercelignore  404.html  404_ERROR_DIAGRAM.md  404_ERROR_FIX.md  404_FIX_SUMMARY.md  502_ERROR_FIX.md  BACKEND_ISSUES_AND_FIXES.md  BROWSER_WARNINGS.md  BUILD_FIX_SUMMARY.md  CHANGES_SUMMARY.md  DEEP_ANALYSIS_AND_FIX_REPORT.md  DEPLOYMENT_FIX.md  DEPLOYMENT_GUIDE.md  Dockerfile  FINAL_REPORT.md  FIXES_APPLIED.md  FIX_SUMMARY.md  Makefile  QUICK_FIX_REFERENCE.md  QUICK_REFERENCE.md  README.md  README_TESTS.md  RENDER_YAML_FIX_SUMMARY.md  REQUEST_FLOW_EXPLAINED.md  SETUP_GUIDE.md  START_HERE.md  STREAMLIT_DEPLOYMENT.md  TESTING_GUIDE.md  VERCEL_DEPLOYMENT.md  VISUAL_WALKTHROUGH.md  docker-compose.yml  index.html  package-lock.json  package.json  pnpm-lock.yaml  (+11 more)
.husky/: commit-msg  pre-commit
.streamlit/: config.toml  secrets.toml.example
backend/: .env.example  .ruff.toml  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: __init__.py  agents.py  evaluation.py  export.py  forecast.py  health.py  ingest.py  router.py  search.py
backend/app/api/v1/endpoints/: analysis.py  chat.py  data.py  health.py
backend/app/core/: auth.py  config.py  deps.py
backend/app/middleware/: auth.py
backend/app/services/: cache.py  chromadb_client.py  data_loaders.py  data_processor.py  embeddings_cache.py  evaluation.py  forecasting_service.py  query_engine.py  session_service.py  supabase_client.py  text_splitters.py  vector_store_pg.py
backend/app/services/agents/: __init__.py  analysis.py  decomposition.py  forecasting.py  orchestrator.py  retrieval.py  visualization.py
backend/tests/: conftest.py  test_health.py
docker/: Dockerfile.backend  Dockerfile.frontend
docs/: API.md  ARCHITECTURE.md  SETUP.md
frontend/: .env.example  .eslintrc.json  jest.config.mjs  middleware.ts  next.config.js  next.config.ts  package-lock.json  package.json  sentry.client.config.ts  sentry.server.config.ts  tsconfig.json
(+55 files in other folders)
