[tool.poetry]
name = "rag-data-analyst-backend"
version = "0.1.0"
description = "FastAPI backend for RAG-powered data analysis platform"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"

# RAG & LLM
llama-index = "^0.10.0"
llama-index-embeddings-openai = "^0.1.0"
llama-index-llms-openai = "^0.1.0"
llama-index-vector-stores-chroma = "^0.1.0"
llama-index-vector-stores-postgres = "^0.1.0"
langchain = "^0.1.0"
langchain-openai = "^0.0.5"
openai = "^1.12.0"
chromadb = "^0.4.22"

# Database
asyncpg = "^0.29.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
alembic = "^1.13.1"

# Data Processing
pandas = "^2.2.0"
numpy = "^1.26.3"
geopandas = "^0.14.2"
openpyxl = "^3.1.2"
python-multipart = "^0.0.9"

# Analytics & Forecasting
scikit-learn = "^1.4.0"
prophet = "^1.1.5"
statsmodels = "^0.14.1"

# Utilities
python-dotenv = "^1.0.1"
httpx = "^0.26.0"
aiofiles = "^23.2.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.4"
pytest-cov = "^4.1.0"
black = "^24.1.1"
ruff = "^0.2.1"
mypy = "^1.8.0"
ipython = "^8.21.0"
httpx = "^0.26.0"

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"